--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "mongoose": "^8.9.4",
     "next": "14.2.23",
     "react": "^18",
